# callumadair.github.io

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  bun.lockb  compose.yml  index.html  justfile  package.json  tailwind.config.js
.devcontainer/: devcontainer.json
shared/: Cargo.toml
shared/src/software/: mod.rs
src/: lib.rs  main.rs  navigation.rs
src/components/: carousel.rs  footer.rs  input.rs  mod.rs  modal.rs  navigation.rs  table.rs
src/error/: pages.rs
src/macros/: mod.rs
src/pages/: mod.rs  projects.rs  reading.rs  software.rs
src/traits/: contains.rs  mod.rs  modal.rs
